# fastapi-sqlmodel-template

./: .env.template  .gitignore  README.md  application-template.yaml  main.py  pyproject.toml  server_info.py  test.py
common/: constant.py  global_enums.py
config/: __init__.py  fastapi_config.py  settings.py
core/: global_context.py  smart_wrapper.py
entity/: __init__.py  base_entity.py  db_models.py  user.py
entity/dto/: UserDto.py  __init__.py  base.py  monitor_dto.py  user_dto.py
exceptions/: base.py  global_exc.py
middleware/: __init__.py  db_session.py
router/: __init__.py  monitor.py  monitor_app.py  test.py  user_app.py
service/: base_service.py  chat_service.py  user_service.py
utils/: __init__.py  file_utils.py  log_utils.py  minio_utils.py  server_info_utils.py
