[project]
name = "rg-fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastapi-pagination>=0.14.1", # fastapi统一分页
    "sqlalchemy[asyncio]>=2.0.43",
    "sqlmodel>=0.0.25",
    "ruamel-yaml>=0.18.6,<0.19.0", # YAML处理
    "cachetools==5.3.3", # 缓存工具
    "filelock==3.15.4", # 文件锁
    "itsdangerous==2.1.2", # 安全签名，用于 SessionMiddleware
    "httpx-sse>=0.4.1",
    "aiomysql>=0.2.0",
    "beartype>=0.21.0", # 类型检查
    "psutil>=7.1.0", # 系统资源
    "pytz>=2025.2",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "miniopy-async>=1.23.4",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
